Crash in Linux debug build when truing to open USD files (USDZ only?) #110950

Closed
opened 2023-08-09 12:23:00 +02:00 by Bastien Montagne · 1 comment

System Information
Operating system: Linux (Debian testing )
Graphics card: NA

Blender Version
Broken: Current main
Worked: ???

Short description of error
Trying to open any of the USDZ files below crashes in a debug build on linux, with the following message:

/home/guest/blender/src/source/blender/io/usd/intern/usd_asset_utils.cc:282:15: runtime error: null pointer passed as argument 2, which is declared to never be null
/home/guest/blender/src/source/blender/blenlib/intern/path_util.c:1100:3: runtime error: null pointer passed as argument 1, which is declared to never be null
/home/guest/blender/src/source/blender/blenlib/intern/path_util.c:530:14: runtime error: load of null pointer of type 'const char'

https://developer.apple.com/augmented-reality/quick-look/models/drummertoy/toy_drummer_idle.usdz

https://developer.apple.com/augmented-reality/quick-look/models/vintagerobot2k/robot_walk_idle.usdz

https://developer.apple.com/augmented-reality/quick-look/models/biplane/toy_biplane_idle.usdz

https://github.com/usd-wg/assets/blob/main/full_assets/ElephantWithMonochord/SoC-ElephantWithMonochord.usdz

**System Information** Operating system: Linux (Debian testing ) Graphics card: NA **Blender Version** Broken: Current main Worked: ??? **Short description of error** Trying to open any of the USDZ files below crashes in a debug build on linux, with the following message: ``` /home/guest/blender/src/source/blender/io/usd/intern/usd_asset_utils.cc:282:15: runtime error: null pointer passed as argument 2, which is declared to never be null /home/guest/blender/src/source/blender/blenlib/intern/path_util.c:1100:3: runtime error: null pointer passed as argument 1, which is declared to never be null /home/guest/blender/src/source/blender/blenlib/intern/path_util.c:530:14: runtime error: load of null pointer of type 'const char' ``` https://developer.apple.com/augmented-reality/quick-look/models/drummertoy/toy_drummer_idle.usdz https://developer.apple.com/augmented-reality/quick-look/models/vintagerobot2k/robot_walk_idle.usdz https://developer.apple.com/augmented-reality/quick-look/models/biplane/toy_biplane_idle.usdz https://github.com/usd-wg/assets/blob/main/full_assets/ElephantWithMonochord/SoC-ElephantWithMonochord.usdz
Bastien Montagne added this to the USD project 2023-08-09 12:23:03 +02:00
Author
Owner

@makowalski here is the bug about the crash I experienced while trying to test !110912 :)

@makowalski here is the bug about the crash I experienced while trying to test !110912 :)
Michael Kowalski self-assigned this 2023-08-13 03:54:55 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-14 19:56:34 +02:00
Bastien Montagne removed this from the USD project 2023-08-25 23:53:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110950
No description provided.